generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Socio {
  id              Int      @id @default(autoincrement())
  codigo          String   @unique @db.VarChar(20)
  dni             String   @unique @db.Char(8)
  nombres         String   @db.VarChar(100)
  apellidoPaterno String   @db.VarChar(50)
  apellidoMaterno String   @db.VarChar(50)
  genero          String   @db.Char(1)
  fechaNacimiento DateTime?
  estadoCivil     String?  @db.Char(1)
  telefono        String?  @db.VarChar(9)
  direccion       String?  @db.VarChar(200)
  email           String?  @db.VarChar(150)
  fechaIngreso    DateTime
  estado          String   @default("A") @db.Char(1)
  fotoUrl         String?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  beneficiarios Beneficiario[]
  documentos    DocumentoSocio[]
  fondosSocios  FondoSocio[]

  @@map("socio")
}

model Beneficiario {
  id              Int       @id @default(autoincrement())
  dni             String    @db.Char(8)
  nombres         String    @db.VarChar(100)
  apellidoPaterno String    @db.VarChar(50)
  apellidoMaterno String    @db.VarChar(50)
  fechaNacimiento DateTime?
  parentesco      String    @db.VarChar(50)
  telefono        String?   @db.VarChar(9)
  socioId         Int       @map("socio_id")
  socio           Socio     @relation(fields: [socioId], references: [id], onDelete: NoAction)
  createdAt       DateTime  @default(now())

  @@map("beneficiario")
}

model DocumentoSocio {
  id            Int      @id @default(autoincrement())
  tipoDocumento String   @db.VarChar(50)
  nombreArchivo String   @db.VarChar(255)
  rutaArchivo   String   @db.VarChar(500)
  mimeType      String   @db.VarChar(100)
  tamaño        Int
  socioId       Int      @map("socio_id")
  socio         Socio    @relation(fields: [socioId], references: [id], onDelete: NoAction)
  createdAt     DateTime @default(now())

  @@map("documentosocio")
}

model Usuario {
  id              Int      @id @default(autoincrement())
  nombres         String   @db.VarChar(100)
  apellidoPaterno String   @db.VarChar(50)
  apellidoMaterno String   @db.VarChar(50)
  username        String   @unique @db.VarChar(50)
  password        String   @db.VarChar(255)
  correo          String?  @unique @db.VarChar(150)
  telefono        String?  @db.VarChar(20)
  rol             String   @db.VarChar(45)
  estado          String   @default("ACTIVO") @db.VarChar(45)
  ultimoAcceso    DateTime?
  createdAt       DateTime @default(now())

  @@map("usuario")
}

model FondoRotatorio {
  id                Int      @id @default(autoincrement())
  nombre            String   @db.VarChar(200)
  organizacion      String   @default("") @db.VarChar(200)
  capitalInicial    Decimal  @db.Decimal(12, 2)
  capitalDisponible Decimal  @db.Decimal(12, 2)
  moneda            String   @default("PEN") @db.Char(3)
  estado            String   @default("ACTIVO") @db.VarChar(20)
  descripcion       String?  @db.Text
  reglamento        String?  @db.Text
  condiciones       String?  @db.Text
  fechaCierre       DateTime?
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  fondosSocios FondoSocio[]
  cajas        Caja[]

  @@map("fondorotatorio")
}

model FondoSocio {
  id              Int       @id @default(autoincrement())
  fechaIngreso    DateTime?
  fechaSalida     DateTime?
  numeroSocio     Int?
  cargo           String?   @db.VarChar(45)
  nivel           String?   @db.VarChar(45)
  observacion     String?   @db.VarChar(45)
  fechaAprobacion DateTime?
  usuarioId       Int?      @map("usuario_id")

  fondoId Int            @map("fondorotatorio_id")
  fondo   FondoRotatorio @relation(fields: [fondoId], references: [id], onDelete: NoAction)
  socioId Int            @map("socio_id")
  socio   Socio          @relation(fields: [socioId], references: [id], onDelete: NoAction)

  aportes       Aporte[]
  prestamos     Prestamo[]

  @@unique([fondoId, socioId])
  @@index([socioId])
  @@map("FondoSocio")
}

model Aporte {
  id          Int      @id @default(autoincrement())
  tipo        String   @db.VarChar(20)
  monto       Decimal  @db.Decimal(12, 2)
  periodo     String   @db.Char(7)
  fechaAporte DateTime @default(now())
  metodoPago  String   @default("EFECTIVO") @db.VarChar(20)
  comprobante String?  @db.VarChar(100)
  observacion String?  @db.Text
  estado      String   @default("ACTIVO") @db.VarChar(20)
  claveUnica  String?  @unique @db.VarChar(50)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  fondoSocioId Int        @map("FondoSocio_Id")
  fondoSocio   FondoSocio @relation(fields: [fondoSocioId], references: [id], onDelete: NoAction)

  @@map("aporte")
}

model Prestamo {
  id                     Int      @id @default(autoincrement())
  monto                  Decimal  @db.Decimal(12, 2)
  tasaInteres            Decimal  @db.Decimal(5, 2)
  numeroCuotas           Int
  montoCuota             Decimal  @db.Decimal(12, 2)
  totalInteres           Decimal  @db.Decimal(12, 2)
  fechaDesembolso        DateTime @default(now())
  fechaPrimerVencimiento DateTime
  estado                 String   @default("ACTIVO") @db.VarChar(20)
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt

  fondoSocioId Int        @map("FondoSocio_Id")
  fondoSocio   FondoSocio @relation(fields: [fondoSocioId], references: [id], onDelete: NoAction)

  cuotas CuotaPrestamo[]

  @@map("prestamo")
}

model CuotaPrestamo {
  id               Int      @id @default(autoincrement())
  numero           Int
  fechaVencimiento DateTime
  monto            Decimal  @db.Decimal(12, 2)
  interes          Decimal  @db.Decimal(12, 2)
  amortizacion     Decimal  @db.Decimal(12, 2)
  saldo            Decimal  @db.Decimal(12, 2)
  montoPagado      Decimal  @db.Decimal(12, 2)
  saldoPendiente   Decimal  @db.Decimal(12, 2)
  fechaPago        DateTime?
  estado           String   @default("PENDIENTE") @db.VarChar(20)
  metodoPago       String?  @db.VarChar(20)
  comprobante      String?  @db.VarChar(100)

  prestamoId Int      @map("prestamo_id")
  prestamo   Prestamo @relation(fields: [prestamoId], references: [id], onDelete: NoAction)

  @@unique([prestamoId, numero])
  @@map("cuotaprestamo")
}

model Caja {
  id           Int      @id @default(autoincrement())
  codigo       String   @unique @db.VarChar(20)
  nombre       String   @db.VarChar(100)
  descripcion  String?  @db.Text
  tipo         String   @default("PRINCIPAL") @db.VarChar(20)
  moneda       String   @default("PEN") @db.Char(3)
  saldoInicial Decimal  @default(0) @db.Decimal(12, 2)
  saldoActual  Decimal  @default(0) @db.Decimal(12, 2)
  estado       String   @default("ACTIVA") @db.VarChar(20)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  fondoId Int            @map("fondorotatorio_id")
  fondo   FondoRotatorio @relation(fields: [fondoId], references: [id], onDelete: NoAction)

  movimientos      MovimientoCaja[]
  arqueos          ArqueoCaja[]
  flujoProyectados FlujoCajaProyectado[]

  @@map("caja")
}

model ConceptoCaja {
  id                  Int      @id @default(autoincrement())
  codigo              String   @unique @db.VarChar(20)
  nombre              String   @db.VarChar(100)
  tipo                String   @db.VarChar(20)
  afectaSaldo         String   @db.VarChar(10)
  descripcion         String?  @db.Text
  requiereComprobante Boolean  @default(true)
  orden               Int      @default(0)
  estado              String   @default("ACTIVO") @db.VarChar(20)
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  movimientos MovimientoCaja[]

  @@map("conceptocaja")
}

model MovimientoCaja {
  id              Int      @id @default(autoincrement())
  codigo          String   @unique @db.VarChar(30)
  tipo            String   @db.VarChar(20)
  monto           Decimal  @db.Decimal(12, 2)
  descripcion     String?  @db.Text
  comprobante     String?  @db.VarChar(100)
  metodoPago      String   @default("EFECTIVO") @db.VarChar(20)
  referencia      String?  @db.VarChar(100)
  fechaMovimiento DateTime @default(now())
  estado          String   @default("REGISTRADO") @db.VarChar(20)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  cajaId     Int          @map("caja_id")
  caja       Caja         @relation(fields: [cajaId], references: [id], onDelete: NoAction)
  conceptoId Int          @map("conceptocaja_id")
  concepto   ConceptoCaja @relation(fields: [conceptoId], references: [id], onDelete: NoAction)

  @@index([cajaId, fechaMovimiento])
  @@index([fechaMovimiento])
  @@index([estado])
  @@map("movimientocaja")
}

model ArqueoCaja {
  id              Int      @id @default(autoincrement())
  codigo          String   @unique @db.VarChar(30)
  fechaArqueo     DateTime @default(now())
  saldoSistema    Decimal  @db.Decimal(12, 2)
  saldoFisico     Decimal  @db.Decimal(12, 2)
  diferencia      Decimal  @db.Decimal(12, 2)
  observacion     String?  @db.Text
  estado          String   @default("PENDIENTE") @db.VarChar(20)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  fechaAprobacion DateTime?
  aprobadoPor     String?  @db.VarChar(50)

  cajaId Int  @map("caja_id")
  caja   Caja @relation(fields: [cajaId], references: [id], onDelete: NoAction)

  @@index([cajaId, fechaArqueo])
  @@map("arqueocaja")
}

model FlujoCajaProyectado {
  id              Int      @id @default(autoincrement())
  fecha           DateTime @db.Date
  tipo            String   @db.VarChar(20)
  concepto        String   @db.VarChar(100)
  montoProyectado Decimal  @db.Decimal(12, 2)
  montoReal       Decimal? @db.Decimal(12, 2)
  descripcion     String?  @db.Text
  estado          String   @default("PROYECTADO") @db.VarChar(20)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  cajaId Int  @map("caja_id")
  caja   Caja @relation(fields: [cajaId], references: [id], onDelete: NoAction)

  @@index([cajaId, fecha])
  @@map("flujocajaproyectado")
}

model AuditLog {
  id              Int      @id @default(autoincrement())
  tabla           String   @db.VarChar(50)
  registroId      Int
  operacion       String   @db.VarChar(20)
  datosAnteriores Json?
  datosNuevos     Json?
  ip              String?  @db.VarChar(45)
  createdAt       DateTime @default(now())

  @@index([tabla, registroId])
  @@index([createdAt])
  @@map("auditlog")
}
